--- a/package.json
+++ b/package.json
@@ -15,6 +15,5 @@
   "bugs": {
     "url": "https://github.com/MYiLA/java-and-script-test/issues"
   },
-  "homepage": "https://github.com/MYiLA/java-and-script-test#readme",
-  "type": "module"
+  "homepage": "https://github.com/MYiLA/java-and-script-test#readme"
 }
